--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "GPL",
   "dependencies": {
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.12"
   }
 }
