--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ismo Aulaskari",
   "license": "GPL",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "morgan": "^1.9.0"
   },
