--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "mongoose": "^5.0.4",
-    "morgan": "^1.9.0",
-    "morgan-body": "^2.0.2"
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
-    "nodemon": "^1.14.12"
+    "nodemon": "^1.14.12",
+    "morgan-body": "^2.0.2"
   }
 }
